Testing overlapping issue fix

--- a/home/css/bind.css
+++ b/home/css/bind.css
@@ -2,6 +2,7 @@ div {
     margin: 10px;
     padding: 10px;
     border: solid black 1px;
+    display: inline-block;
   }
 
   .pinkBG{
